# array-min-max-to-average-replacer

./: CMakeLists.txt  OS_lab_2.cpp  functions.cpp  header.h  main.cpp
tests/: tests.cpp
